--- a/front-end/index.html
+++ b/front-end/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="shortcut icon" href="/favicon-bioverde.png" type="image/x-icon">
+    <title>Bio Verde - Alimentos Orgânicos</title>
   </head>
   <body>
     <div id="root"></div>
