--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,11 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/favicon-bioverde.png" type="image/x-icon">
-    <title>Bio Verde - Alimentos Orgânicos</title>
+    <link
+      rel="shortcut icon"
+      href="/favicon-bioverde.png"
+      type="image/x-icon"
+    />
+    <title>BioVerde</title>
   </head>
   <body>
     <div id="root"></div>
